--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
+    "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.17"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.17"
+    "eslint-config-next": "14.2.17",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
